--- a/assets/css/components/list-header.css
+++ b/assets/css/components/list-header.css
@@ -26,6 +26,7 @@
 .list-header::after {
   content: "";
   position: absolute;
+  top: 0;
   width: 100vw;
   height: 100%;
   margin-left: 50%;
